--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
         }
 
         @keyframes float {
+
             0%,
             100% {
                 transform: translateY(0) translateX(0);
@@ -250,6 +251,7 @@
         }
 
         @media screen and (max-width: 767px) {
+
             .services-card-container,
             .carousel-item .row {
                 gap: 1rem;
@@ -448,6 +450,27 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        function slideValidation() {
+            const screenWidth = window.innerWidth
+            const carrousel = document.getElementById('testimonialCarousel')
+            
+
+            if (screenWidth < 768) {
+               carrousel.removeAttribute('data-bs-ride');
+               carrousel.setAttribute('data-bs-pause', 'true');
+            }
+            else {
+                carrousel.setAttribute('data-bs-ride', 'carousel');
+            }
+        }
+        window.addEventListener('resize', function () {
+            slideValidation()
+        })
+        document.addEventListener('DOMContentLoaded', (event) => {
+            slideValidation()
+        });
+    </script>
 </body>
 
 </html>
